--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,29 +1,33 @@
 <div class="content about-content center-stage">
   <h1>About</h1>
   <div class="feature-wrapper">
-    <div class="content-wrapper clearfix below-view" viewportCheck>
-      <div class="main">
+    <div class="prime-card clearfix below-view" viewportCheck>
+      <div class="dp main">
         <h2>Hi! I am Jayabratha Saha, friends call me Jay.</h2>
         <i class="icon-android-compass"></i>
       </div>
-      <div class="feature-content">
-        <p>
-          I am a frontend developer with full stack experience and also an artist and designer by passion. As a
-          developer
-          I mostly
-          work on web technologies currently focusing on MEAN(MongoDB, Express, Angular, NodeJS) technology stack. I
-          love
-          creating
-          my own designs and open source components and always keep me involved in proof of concepts and projects on
-          latest
-          technologies.
-          <br />
-          <br /> Designing has always been with me even before I started loving technology. I use to design products as
-          well along
-          with portraits and paintings. Being a frontend developer, nowadays I am mostly into interface design that are
-          delightful
-          and accessible.
-        </p>
+      <div class="info-wrapper">
+        <div class="feature-content">
+          <p>
+            I am a frontend developer with full stack experience and also an artist and designer by passion. As a
+            developer
+            I mostly
+            work on web technologies currently focusing on MEAN(MongoDB, Express, Angular, NodeJS) technology stack. I
+            love
+            creating
+            my own designs and open source components and always keep me involved in proof of concepts and projects on
+            latest
+            technologies.
+            <br />
+            <br /> Designing has always been with me even before I started loving technology. I use to design products
+            as
+            well along
+            with portraits and paintings. Being a frontend developer, nowadays I am mostly into interface design that
+            are
+            delightful
+            and accessible.
+          </p>
+        </div>
       </div>
     </div>
   </div>
@@ -32,40 +36,40 @@
     <div class="skills-wrapper" viewportCheck (enteredViewport)="animateSkills()">
       <div class="tiles-container">
         <ul class="flex-wrapper skill-list">
-          <li #skillItem class="tile-wrapper small js hide">
+          <li #skillItem class="tile small js hide">
             <i class="icon-social-javascript"></i>
           </li>
-          <li #skillItem class="tile-wrapper small html hide">
+          <li #skillItem class="tile small html hide">
             <i class="icon-social-html5"></i>
           </li>
-          <li #skillItem class="tile-wrapper small css hide">
+          <li #skillItem class="tile small css hide">
             <i class="icon-social-css3"></i>
           </li>
-          <li #skillItem class="tile-wrapper small angular hide">
+          <li #skillItem class="tile small angular hide">
             <i class="icon-social-angular"></i>
           </li>
-          <li #skillItem class="tile-wrapper small react hide">
+          <li #skillItem class="tile small react hide">
             <img src="../../assets/react-logo.svg" alt="React" />
           </li>
-          <li #skillItem class="tile-wrapper small ts hide">
+          <li #skillItem class="tile small ts hide">
             <img src="../../assets/typescript-logo.png" alt="TypeScript" />
           </li>
-          <li #skillItem class="tile-wrapper small nodejs hide">
+          <li #skillItem class="tile small nodejs hide">
             <img src="../../assets/nodejs-logo.png" alt="NodeJS" />
           </li>
-          <li #skillItem class="tile-wrapper small sass hide">
+          <li #skillItem class="tile small sass hide">
             <img src="../../assets/sass-logo.png" alt="Sass" />
           </li>
-          <li #skillItem class="tile-wrapper small firebase hide">
+          <li #skillItem class="tile small firebase hide">
             <img src="../../assets/firebase-logo.png" alt="Firebase" />
           </li>
-          <li #skillItem class="tile-wrapper small pwa hide">
+          <li #skillItem class="tile small pwa hide">
             <img src="../../assets/pwa-logo.png" alt="PWA" />
           </li>
-          <li #skillItem class="tile-wrapper small mongodb hide">
+          <li #skillItem class="tile small mongodb hide">
             <img src="../../assets/mongodb-logo.jpeg" alt="MongoDB" />
           </li>
-          <li #skillItem class="tile-wrapper small jasmine hide">
+          <li #skillItem class="tile small jasmine hide">
             <img src="../../assets/jasmine-logo.png" alt="Jasmine" />
           </li>
         </ul>
