--- a/src/app/art/art-list/art-list.component.html
+++ b/src/app/art/art-list/art-list.component.html
@@ -1,12 +1,12 @@
 <div class="content art-content center-stage">
   <h1>Art</h1>
   <div class="feature-wrapper">
-    <div class="content-wrapper clearfix below-view" viewportCheck>
-      <div class="main">
+    <div class="prime-card clearfix below-view" viewportCheck>
+      <div class="dp main">
         <h2>A collection of my sketches and paintings</h2>
         <i class="icon-android-color-palette"></i>
       </div>
-      <div class="feature-content">
+      <div class="info-wrapper feature-content">
       </div>
     </div>
   </div>
