--- a/src/app/blog/blog-list/blog-list.component.css
+++ b/src/app/blog/blog-list/blog-list.component.css
@@ -1,4 +1,4 @@
-.blog-card {
+/* .blog-card {
     position: relative;
     width: 48%;
     min-height: 200px;
@@ -9,18 +9,12 @@
     font-family: Roboto;
     font-weight: 200;
     margin-bottom: 1em;
-}
+} */
 
 .featured-blog {
     position: relative;
-    float: left;
-    background: #FFFFFF;
-    font-size: 1.25em;
-    font-family: Roboto;
-    border: thin solid #e4e2e2;
-    padding: 1em;
-    margin: 0;
-    min-height: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .cover-art {
