--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -7,10 +7,6 @@
     margin-top: 115vh;
 }
 
-/* .home-content.adjust-fix {
-    margin-top: 195vw;
-} */
-
 .scroll-indicator {
     position: fixed;
     right: 2em;
@@ -66,20 +62,8 @@
 }
 
 .overview-wrapper {
-    height: 95vh;
+    height: 75vh;
     padding-top: 3em;
-}
-
-.overview {
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    background: #FFFFFF;
-    width: 100%;
-    min-height: 24em;
-    height: 22vw;
-    box-shadow: 0 1px 4px rgba(0,0,0,.05);
-    border: 1px solid rgba(0,0,0,.09);
 }
 
 .dp.overview-dp {
@@ -127,11 +111,6 @@
 .overview.below-view .underline {
     width: 10px;
 }
-.overview-content-wrapper {
-    position: relative;
-    width: 65%;
-    height: 100%;
-}
 .overview-content-background {
     position: absolute;
     width: 100%;
@@ -142,21 +121,19 @@
     background-repeat: no-repeat;
 }
 .overview-content {
-    position: absolute;
+    position: relative;
     top: 0;
-    padding: 3em 1em;
+    padding: 1em;
     font-size: 2.25em;
     font-family: Roboto;
     font-weight: 100;
     color: #fff;
-    width: 65%;
+    width: 100%;
 }
 .overview-wrapper:nth-child(odd) .overview-content {
-    left: 0;
     text-align: left;
 }
 .overview-wrapper:nth-child(even) .overview-content {
-    right: 0;
     text-align: right;
 }
 .art-overview .overview-content-background {
@@ -178,19 +155,19 @@
     background: #0ab779;
 }
 
-.art-overview .overview-content-wrapper {
+.art-overview .info-wrapper {
     background: linear-gradient(140deg, #fd7b1f, #f33159);
 }
-.projects-overview .overview-content-wrapper {
+.projects-overview .info-wrapper {
     background: linear-gradient(140deg, #f33159, #a02dbd);
 }
-.blog-overview .overview-content-wrapper {
+.blog-overview .info-wrapper {
     background: linear-gradient(140deg, #a02dbd, #4280f1);
 }
-.about-overview .overview-content-wrapper {
+.about-overview .info-wrapper {
     background: linear-gradient(140deg, #4280f1, #0ab779);
 }
-.contact-overview .overview-content-wrapper {
+.contact-overview .info-wrapper {
     background: linear-gradient(140deg, #0ab779, #9edc65);
 }
 
@@ -217,13 +194,14 @@
 
 @media (max-width: 650px) {
     .home-content {
-        margin-top: 165vw;
         padding: 0 0.8em;
+        margin: 0;
     }
     .overview-wrapper {
         min-height: 550px;
-        height: 80vh;
-        margin: 3em 0;
+        height: auto;
+        padding: 0;
+        margin: 3vh 0;
     }
     .dp.overview-dp {
         height: 25em;
@@ -237,7 +215,7 @@
         left: 0;
         right: 0;
     }
-    .overview-content-wrapper {
+    .info-wrapper {
         width: 100%;
         height: 22em;
     }
