--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -239,8 +239,8 @@ p.sub_desc {
 
 .card {
     position: relative;
-    width: 48%;
-    min-height: 300px;
+    width: 48.5%;
+    min-height: 330px;
     background: #FFFFFF;
     padding: 1.5em 1.5em 7em;
     border: thin solid #efefef;
@@ -260,7 +260,6 @@ p.sub_desc {
 .card:not(.featured-project) .title {
     margin: -1.5em -1.5em 0.5em;
     padding: 1.5em;
-    min-height: 7em;
 }
 
 .card .title h3 {
@@ -271,25 +270,47 @@ p.sub_desc {
 }
 
 .card .tag-list {
+    display: flex;
     margin: 1em 0 1.5em;
+    cursor: pointer;
 }
 
 .card .tag-list li {
-    display: inline-block;
-    padding: 5px 10px 5px 5px;
+    display: flex;
     font-size: 0.75em;
     background: #f0f0f0;
     margin-right: 5px;
+    margin-left: -10px;
     border-radius: 15px;
+    align-items: center;
+}
+.card .tag-list li:first-child {
+    margin-left: 0;
 }
 
 .card .tag-color {
-    height: 1em;
-    width: 1em;
+    height: 30px;
+    width: 30px;
     display: inline-block;
     border-radius: 50%;
-    margin-right: 5px;
     vertical-align: middle;
+    text-align: center;
+    line-height: 30px;
+    font-size: 12px;
+    color: #ffff;
+    text-transform: uppercase;
+}
+
+.card .tag-text {
+    padding: 0;
+    width: 0;
+    transition: width 0.5s, padding 0.5s;
+    overflow: hidden;
+}
+
+.card .tag-list.show-tags .tag-text {
+    width: 60px;
+    padding: 0 10px 0 6px;
 }
 
 .card.feature-content {
