--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -67,6 +67,11 @@
 }
 
 .dp.overview-dp {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    padding: 2em;
     background: #333333;
     height: 100%;
     text-align: center;
@@ -77,10 +82,12 @@
 }
 
 .overview h2 {
+    position: relative;
+    top: 25px;
     font-size: 4em;
     font-weight: normal;
     color: #FFFFFF;
-    padding: 35px 0;
+    margin: 0;
     text-align: center;
     transform: translate3d(0, 0, 0);
     transition: transform 1.5s;
@@ -100,10 +107,8 @@
     height: 5px;
     width: 100px;
     background: #f31b48;
-    position: absolute;
-    top: 25px;
     bottom: 0;
-    margin: auto;
+    margin: 0;
     left: 0;
     right: 0;
     transition: width 1.5s;
