--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
-<div class="home-content center-stage" [class.adjust-fix]="headerState.state === HEADER_STATE.Fixed">
+<div class="home-content center-stage">
   <div class="overview-wrapper">
     <div class="prime-card overview art-overview" [class.above-view]="steps[1].isAboveView" [class.below-view]="steps[1].isBelowView"
-      viewportCheck [padding]=padding [checkAboveView]=true >
+      viewportCheck [padding]=padding [checkAboveView]=true (enteredViewport)="handleCardInView(1)">
       <div class="dp overview-dp">
         <h2>Art</h2>
         <div class="alpha-initial-bg">A</div>
@@ -21,7 +21,7 @@
   </div>
   <div class="overview-wrapper">
     <div class="prime-card overview projects-overview" [class.above-view]="steps[2].isAboveView" [class.below-view]="steps[2].isBelowView"
-      viewportCheck  [padding]=padding [checkAboveView]=true >
+      viewportCheck  [padding]=padding [checkAboveView]=true (enteredViewport)="handleCardInView(2)" >
       <div class="dp overview-dp">
         <h2>Projects</h2>
         <div class="alpha-initial-bg">P</div>
@@ -41,7 +41,7 @@
   </div>
   <div class="overview-wrapper">
     <div class="prime-card overview blog-overview" [class.above-view]="steps[3].isAboveView" [class.below-view]="steps[3].isBelowView"
-      viewportCheck  [padding]=padding [checkAboveView]=true >
+      viewportCheck  [padding]=padding [checkAboveView]=true (enteredViewport)="handleCardInView(3)">
       <div class="dp overview-dp">
         <h2>Blog</h2>
         <div class="alpha-initial-bg">B</div>
@@ -61,7 +61,7 @@
   </div>
   <div class="overview-wrapper">
     <div class="prime-card overview about-overview" [class.above-view]="steps[4].isAboveView" [class.below-view]="steps[4].isBelowView"
-      viewportCheck  [padding]=padding [checkAboveView]=true >
+      viewportCheck  [padding]=padding [checkAboveView]=true (enteredViewport)="handleCardInView(4)">
       <div class="dp overview-dp">
         <h2>About</h2>
         <div class="alpha-initial-bg">A</div>
@@ -82,7 +82,7 @@
   </div>
   <div class="overview-wrapper">
     <div class="prime-card overview contact-overview" [class.above-view]="steps[5].isAboveView" [class.below-view]="steps[5].isBelowView"
-      viewportCheck  [padding]=padding [checkAboveView]=true >
+      viewportCheck  [padding]=padding [checkAboveView]=true (enteredViewport)="handleCardInView(5)">
       <div class="dp overview-dp">
         <h2>Contact</h2>
         <div class="alpha-initial-bg">C</div>
@@ -101,7 +101,7 @@
     </div>
   </div>
 </div>
-<div class="scroll-indicator" *ngIf="!(isMobile || headerState.state === HEADER_STATE.Initial)">
+<div class="scroll-indicator" *ngIf="!(isMobile || headerState === HEADER_STATE.Initial)">
   <div class="me home-anchors" [ngClass]="{'active': stepCount === 0}" (click)="setStepCount(0)">
     <div class="inner-dot"></div>
   </div>
